# EfficientZeroV2

./: .gitignore  README.md  pyproject.toml  tmp.py
ez/: agent.py  environments.py  eval.py  losses.py  main.py  mcts_config.py  networks.py  replay_buffer.py  train.py  utils.py
ez/agents/: base.py
ez/agents/models/: base_model.py
ez/config/exp/: atari.yaml  dmc_image.yaml  state.yaml
ez/configs/: config.yaml
ez/configs/experiment/: atari.yaml
ez/envs/: __init__.py
ez/mcts/: __init__.py  cy_mcts.py  make_all.sh  make_ctree_ori_ctree.sh  py_mcts.py
ez/mcts/ctree/: make.sh
ez/utils/: format.py
ez/worker/: __init__.py  base.py  batch_worker.py  data_worker.py  eval_worker.py
ez_jax/: main.py
ez_jax/agent/: ez_agent.py
ez_jax/config/: config.py
ez_jax/data/: trajectory.py
ez_jax/envs/: env_factory.py  wrapper.py
ez_jax/mcts/: mctx_search.py
ez_jax/models/: networks.py
ez_jax/training/: trainer.py
ez_jax/utils/: format.py
scripts/: train.sh
