[tool.setuptools]
packages = ["ez","ez_jax"] # 只包含主包

[project]
name = "EfficientZeroV2"
version = "0.1.0"
dependencies = [
  "jax[tpu]==0.4.6",
  "flax>=0.7.0",
  "optax>=0.1.7",
  "mctx>=0.0.4",
  "dm-env>=1.6",
  "dm_control>=1.0.9",
  "gymnasium[atari]>=0.29.0",
  "gym==0.22.0",
  "gymnax",
  "ale-py",
  "numpy<2",
  "hydra-core>=1.3.0",
  "wandb>=0.15.0",
  "opencv-python>=4.5.0",
  "imageio[ffmpeg]>=2.20.0",
  "tqdm>=4.64.0",
]
