[tool.setuptools]
packages = ["ez"] # 只包含主包

[project]
name = "EfficientZeroV2"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
  
  "dm-env>=1.6",
  "dm_control>=1.0.9",
  # "gymnasium[atari]>=0.29.0",
  # "ale-py",
  "gym[atari,accept-rom-license]",
  "numpy<2",
  "hydra-core>=1.3.0",
  "wandb>=0.15.0",
  "opencv-python>=4.5.0",
  "imageio[ffmpeg,pyav]>=2.20.0",
  "tqdm>=4.64.0",
  "cython",
  "ray<2",
  "pydantic<2",#ray<2 requires pydantic<2
  "torchrl",
  "kornia",
  "dmc2gym @ git+https://github.com/denisyarats/dmc2gym.git",
  "colorednoise"
]
[project.optional-dependencies]
cpu = ["torch>=2"]
gpu = ["torch>=2"]

[tool.uv]
# 自定义缓存键，覆盖默认行为。这几个同时改变时，才会重新构建
cache-keys = [
    # 3. 关键！监控所有 .pyx 文件的变化。以决定是否重新运行setup.py
    #    根据你的 setup.py，这些文件位于 'lzero' 和 'zoo' 目录下。
    #    我们使用 glob 模式来匹配所有文件。
    { file = "./**/*.pyx" },
]
# 必须配置，否则会有
# error: Requirements contain conflicting indexes for package `torch` in all marker environments:
# - https://download.pytorch.org/whl/cpu
# - https://download.pytorch.org/whl/cu124
conflicts = [
  [{ extra = "cpu" }, { extra = "gpu" }]
]

[tool.uv.sources]
torch = [
  { index = "pytorch-gpu", extra = "gpu" }, # GPU环境用GPU源
  { index = "pytorch-cpu", extra = "cpu" }, 
]

# 索引定义
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
[[tool.uv.index]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
